--- a/index.html
+++ b/index.html
@@ -4,12 +4,14 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>g3 architects</title>
-  <link rel="stylesheet" href="style/architect.css">
+  <link rel="stylesheet" href="style.css">
 
 </head>
-<body>
+<body class="work-sans-font">
   <header>
-
+   <nav>
+    <h3 class="brand">G3 architects</h3>
+   </nav>
   </header>
 
 
