--- a/index.html
+++ b/index.html
@@ -11,6 +11,12 @@
   <header>
    <nav>
     <h3 class="brand">G3 architects</h3>
+    <ul class="nav-links">
+    <li class="nav-item"><a href="" class="nav-link">home</a></li>
+    <li class="nav-item"><a href="" class="nav-link">about</a></li>
+    <li class="nav-item"><a href="" class="nav-link">contact us</a></li>
+    <li class="nav-item"><a href="" class="nav-link">login</a></li>
+    </ul>
    </nav>
   </header>
 
