--- a/index.html
+++ b/index.html
@@ -8,16 +8,25 @@
 
 </head>
 <body class="work-sans-font">
-  <header>
-   <nav>
+  <header class="bg-light">
+   <nav class="navbar display-flex">
     <h3 class="brand">G3 architects</h3>
-    <ul class="nav-links">
-    <li class="nav-item"><a href="" class="nav-link">home</a></li>
-    <li class="nav-item"><a href="" class="nav-link">about</a></li>
-    <li class="nav-item"><a href="" class="nav-link">contact us</a></li>
-    <li class="nav-item"><a href="" class="nav-link">login</a></li>
+    <ul class="nav-links display-flex">
+    <li class="nav-item"><a href="" class="nav-link text-grey">home</a></li>
+    <li class="nav-item"><a href="" class="nav-link text-grey">about</a></li>
+    <li class="nav-item"><a href="" class="nav-link text-grey">contact us</a></li>
+    <li class="nav-item"><a href="" class="nav-link text-grey">login</a></li>
     </ul>
    </nav>
+
+   <div class="banner">
+       <div class="hero-content">
+        <h1 class="banner-title">brand new group of architects</h1>
+      <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even</p>
+      <button class="btn-primary">explore more</button>
+    </div>
+      <img src="images/banner.png" alt="">
+   </div>
   </header>
 
 
