addeded sponsor companies and made it

--- a/index.html
+++ b/index.html
@@ -41,10 +41,6 @@
         <button class="btn-primary">explore more</button>
       </div>
     </section>
-    <!-- features will enjoy  -->
-    <section>
-
-    </section>
 
     <!-- some facts  -->
      <section class="some-facts">
@@ -77,6 +73,20 @@
         </div>
       </div>
      </section>
+      
+    <section class="our-sponsors">
+      <div class="sponsors-info">
+        <h3 class="section-title">our sponsors</h3>
+        <p class="text-light-gray">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration.</p>
+      </div>
+      <div class="sponsor-companies">
+        <img src="images/sponsors/spotify.png" alt="">
+        <img src="images/sponsors/amazon.png" alt="">
+        <img src="images/sponsors/google.png" alt="">
+        <img src="images/sponsors/telerama.png" alt="">
+        <img src="images/sponsors/figma.png" alt="">
+      </div>
+    </section>
   </main>
   <footer>
 
