--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>g3 architects</title>
-  <link rel="stylesheet" href="/styles/architects.css">
+  <link rel="stylesheet" href="./styles/architects.css">
 </head>
 <body class="work-sans-font">
   <header class="bg-light">
